--- a/lab_2_21130416_NguyenDinhLam.ipynb
+++ b/lab_2_21130416_NguyenDinhLam.ipynb
@@ -3331,7 +3331,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data = df.groupby(['nationality'])['english.grade', 'math.grade', 'sciences.grade', 'language.grade', 'portfolio.rating', 'coverletter.rating', 'refletter.rating']\n",
+        "data = df.groupby(['nationality'])[['english.grade', 'math.grade', 'sciences.grade', 'language.grade', 'portfolio.rating', 'coverletter.rating', 'refletter.rating']]\n",
         "\n",
         "pd.DataFrame(data.mean())"
       ],
@@ -3341,18 +3341,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "e9bbd57a-13b5-4387-e95b-fd1002e93c66"
+        "outputId": "a05db47d-1366-42ae-9e74-28a1baa28cc8"
       },
-      "execution_count": 98,
+      "execution_count": 104,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-98-2e9b278fabb4>:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
-            "  data = df.groupby(['nationality'])['english.grade', 'math.grade', 'sciences.grade', 'language.grade', 'portfolio.rating', 'coverletter.rating', 'refletter.rating']\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -3461,7 +3453,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2dceaa99-b9ca-4f80-a413-07c96a999a81\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-27cda72f-8806-4234-83dc-3e8b55f45375\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -3816,7 +3808,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2dceaa99-b9ca-4f80-a413-07c96a999a81')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-27cda72f-8806-4234-83dc-3e8b55f45375')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3868,12 +3860,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2dceaa99-b9ca-4f80-a413-07c96a999a81 button.colab-df-convert');\n",
+              "        document.querySelector('#df-27cda72f-8806-4234-83dc-3e8b55f45375 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2dceaa99-b9ca-4f80-a413-07c96a999a81');\n",
+              "        const element = document.querySelector('#df-27cda72f-8806-4234-83dc-3e8b55f45375');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -3893,8 +3885,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-51caa401-e35a-4d66-9322-9423a025dc19\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-51caa401-e35a-4d66-9322-9423a025dc19')\"\n",
+              "<div id=\"df-f36feb8d-86a4-48a8-a56e-2d1ee3948a64\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f36feb8d-86a4-48a8-a56e-2d1ee3948a64')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -4013,7 +4005,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-51caa401-e35a-4d66-9322-9423a025dc19 button');\n",
+              "        document.querySelector('#df-f36feb8d-86a4-48a8-a56e-2d1ee3948a64 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -4029,7 +4021,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 98
+          "execution_count": 104
         }
       ]
     },
